// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`when building duplicate shared decimals should have validation failures for each entity: when building duplicate shared decimals should have validation failures for each entity -> SD 1 message 1`] = `"Shared Decimal named EntityName is a duplicate declaration of that name."`;

exports[`when building duplicate shared decimals should have validation failures for each entity: when building duplicate shared decimals should have validation failures for each entity -> SD 1 sourceMap 1`] = `
Object {
  "column": 2,
  "line": 9,
  "tokenText": "Shared Decimal",
}
`;

exports[`when building duplicate shared decimals should have validation failures for each entity: when building duplicate shared decimals should have validation failures for each entity -> SD 2 message 1`] = `"Shared Decimal named EntityName is a duplicate declaration of that name."`;

exports[`when building duplicate shared decimals should have validation failures for each entity: when building duplicate shared decimals should have validation failures for each entity -> SD 2 sourceMap 1`] = `
Object {
  "column": 2,
  "line": 2,
  "tokenText": "Shared Decimal",
}
`;

exports[`when building shared decimal source map should have line, column, text for each property 1`] = `
SharedDecimalSourceMap {
  "decimalPlaces": Object {
    "column": 6,
    "line": 6,
    "tokenText": "decimal places",
  },
  "documentation": Object {
    "column": 4,
    "line": 3,
    "tokenText": "documentation",
  },
  "maxValue": Object {
    "column": 6,
    "line": 8,
    "tokenText": "max value",
  },
  "metaEdId": Object {
    "column": 28,
    "line": 2,
    "tokenText": "[123]",
  },
  "metaEdName": Object {
    "column": 17,
    "line": 2,
    "tokenText": "EntityName",
  },
  "minValue": Object {
    "column": 6,
    "line": 7,
    "tokenText": "min value",
  },
  "namespaceInfo": Object {
    "column": 0,
    "line": 1,
    "tokenText": "Begin Namespace",
  },
  "totalDigits": Object {
    "column": 6,
    "line": 5,
    "tokenText": "total digits",
  },
  "type": Object {
    "column": 2,
    "line": 2,
    "tokenText": "Shared Decimal",
  },
}
`;

exports[`when building shared decimal with invalid trailing text should have extraneous input error 1`] = `
Array [
  "extraneous input 'TrailingText' expecting {'Abstract Entity', 'Association', 'End Namespace', 'Choice', 'Common', 'Descriptor', 'Domain', 'Domain Entity', 'Enumeration', 'Interchange', 'Inline Common', 'Shared Decimal', 'Shared Integer', 'Shared Short', 'Shared String', 'Subdomain'}, column: 0, line: 9, token: TrailingText",
]
`;

exports[`when building shared decimal with lowercase shared decimal name should have extraneous input error 1`] = `
Array [
  "extraneous input 'entity' expecting ID, column: 17, line: 2, token: entity",
]
`;

exports[`when building shared decimal with no decimal places property should have mismatched input and extraneous input error 1`] = `
Array [
  "mismatched input 'min value' expecting 'decimal places', column: 4, line: 6, token: min value",
]
`;

exports[`when building shared decimal with no documentation should have mismatched input error 1`] = `
Array [
  "mismatched input 'total digits' expecting 'documentation', column: 6, line: 3, token: total digits",
]
`;

exports[`when building shared decimal with no max value should have mismatched input error 1`] = `
Array [
  "mismatched input 'End Namespace' expecting {UNSIGNED_INT, DECIMAL_VALUE, '+', '-'}, column: 0, line: 9, token: End Namespace",
]
`;

exports[`when building shared decimal with no metaed id should have token recognition error 1`] = `
Array [
  "token recognition error at: '[]', column: 28, line: 2, token: ",
]
`;

exports[`when building shared decimal with no min value should have extraneous input error 1`] = `
Array [
  "extraneous input 'max value' expecting {UNSIGNED_INT, DECIMAL_VALUE, '+', '-'}, column: 4, line: 8, token: max value",
]
`;

exports[`when building shared decimal with no shared decimal name should have missing id error 1`] = `
Array [
  "missing ID at '[123]', column: 18, line: 2, token: [123]",
]
`;

exports[`when building shared decimal with no total digits property should have extraneous input error 1`] = `
Array [
  "mismatched input 'decimal places' expecting 'total digits', column: 4, line: 5, token: decimal places",
]
`;

exports[`when building shared decimal with no total digits value should have extraneous input and mismatched input error 1`] = `
Array [
  "extraneous input 'decimal places' expecting UNSIGNED_INT, column: 4, line: 6, token: decimal places",
  "mismatched input 'min value' expecting 'decimal places', column: 4, line: 7, token: min value",
]
`;
